# LatestNews

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  biome.json  package-lock.json  package.json  pyproject.toml
!DOCS/brainstorming/: brainstorming-session-2026-04-17-1430.md
!DOCS/implementation-artifacts/: 1-1-bootstrap-the-monorepo-scaffold.md  1-2-implement-design-tokens.md  1-3-implement-typography-system.md  1-4-install-and-tokenize-shadcn-ui-foundation-components.md  1-5-implement-appshell-with-routing-theme-toggle-and-keyboard-overlay.md  2-1-dashboard-capture-input-and-drag-drop-zone.md  2-2-backend-ingest-endpoint-with-atomic-stub-write.md  2-3-global-cmd-v-paste-handler-with-focus-discrimination.md  sprint-status.yaml
!DOCS/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-04-17-final.md  implementation-readiness-report-2026-04-17.md  prd.md  ux-design-specification.md
.github/workflows/: ci.yml
plugins/: README.md
scripts/: build.sh  dev.sh  start.sh  test-ingest.sh
src/latestnews/: __init__.py  __main__.py  _time.py  app.py
src/latestnews/api/: __init__.py  events.py  health.py  items.py
src/latestnews/events/: bus.py  types.py
src/latestnews/fs/: __init__.py  writer.py
src/latestnews/ingest/: coordinator.py
src/latestnews/settings/: __init__.py
tests/backend/: test_health.py
tests/backend/api/: test_events.py  (+1 more)
web/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.css  App.tsx  index.css  main.tsx  router.tsx
(+41 files in other folders)
